--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <li ng-repeat="obj in data">{{obj.name}}</li>
-    <h1>Home</h1>
-    <a href="/list">List</a>
+    <h1 class="page-header">{{title}}</h1>
+    <h3><small>{{desc}}</small></h3>
 </div>
