Add some more features

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="app.home">Test</a>
+            <a class="navbar-brand" ui-sref="app.home">{{appName}}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
